Fixed some layout issues with the splash page, removed background from splash page, moved splash page CSS to its own file for ease of editing

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -920,58 +920,4 @@ body.safe-mode .accessibility-toggle {
     width: 100%;
 }
 
-/* Login Screen */
 
-.login {
-    height: 300px;
-    width: 500px;
-    border: 2px var(--dot-green) solid;
-    border-radius: 20px;
-    position: fixed;
-    inset: 0px;
-    margin: auto;
-    background-color: var(--accent-color);
-    box-sizing: border-box;
-    text-align: center;
-}
-
-.login-box {
-    height: 265px;
-    margin-top: 5px;
-    background-color: var(--bg-color);
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-}
-
-.username {
-    height: 30px;
-    width: 200px;
-    border: 2px var(--dot-green) solid;
-    border-radius: 5px;
-    margin: auto;
-    margin-bottom: 10px;
-}
-
-.password {
-    height: 30px;
-    width: 200px;
-    border: 2px var(--dot-green) solid;
-    border-radius: 5px;
-    margin: auto;
-    margin-bottom: 20px;
-}
-
-.desktop {
-    height: 30px;
-    width: 75px;
-    border: 2px var(--dot-green) solid;
-    border-radius: 5px;
-    padding: 5px;
-    margin: auto;
-}
-
-.desktop a:hover {
-    text-decoration: none;
-    color: var(--btn-terminal);
-    background-color: var(--bg-color);
-}
